Fix several minor layout issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -450,8 +450,12 @@ img::-moz-selection {
   }
   h2 {
     color: $theme-primary;
-    font-size: 2.5em;
     font-weight: 600;
+  }
+  @media (min-width: 992px) {
+    h2 {
+      font-size: 2.5em;
+    }
   }
   .post-author {
     margin: 0;
